# Todo-App

./: .flake8  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh  production_data.py
todo_app/: conftest.py  manage.py
todo_app/accounts/: urls.py
todo_app/accounts/managers/: account.py
todo_app/accounts/migrations/: 0001_initial.py
todo_app/accounts/models/: account.py
todo_app/accounts/serializers/: account.py
todo_app/accounts/tests/fixtures/: accounts.py
todo_app/accounts/views/: account.py
todo_app/api/: apps.py
todo_app/authentication/: apps.py
todo_app/authentication/serializers/: login.py
todo_app/authentication/views/: login.py
todo_app/general/: authentication.py
todo_app/project/: asgi.py  urls.py  wsgi.py
todo_app/project/settings/: __init__.py  base.py  envvars.py  logging.py  rest_framework.py
todo_app/project/settings/templates/: settings.dev.py  settings.unittests.py
todo_app/task/: apps.py  urls.py
todo_app/task/filters/: task.py
todo_app/task/migrations/: 0001_initial.py
todo_app/task/models/: task.py
todo_app/task/serializers/: task.py
todo_app/task/views/: task.py
todo_app/todoapp/: apps.py  urls.py  views.py
